apps/control-center-ui/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: control-center-ui
  namespace: cloudmind
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: cloudcontrol.internal.dxc.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: control-center-ui
            port:
              number: 80
